--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ html { scroll-behavior:smooth; }
 <header>best-shop-1</header>
 
 <nav>
-  <a href="#">Home|</a>
+  <a href="index.html">Home|</a>
   <a href="#">Deals|</a>
   <a href="#">Categories|</a>
   <a href="#">Contact|</a>
@@ -207,7 +207,7 @@ html { scroll-behavior:smooth; }
     Next Category=10
     
     </p>
-    <a href="https://wa.me/message/3WCAH2EMJYHNG1">OPEN</a>
+    <a href="index2.html">OPEN</a>
   </div>
   <div class="category">
     <img src="2.jpeg">
