--- a/index3.html
+++ b/index3.html
@@ -171,7 +171,7 @@ html { scroll-behavior:smooth; }
 <header>best-shop-1</header>
 
 <nav>
-  <a href="#">Home|</a>
+  <a href="index.html">Home|</a>
   <a href="#">Deals|</a>
   <a href="#">Categories|</a>
   <a href="#">Contact|</a>
