--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@ nav a:hover { color:yellow; }
 }
 .category:hover { transform:translateY(-10px); box-shadow:0 0 25px rgba(0,0,0,0.5); }
 .category img { width:100%; height:200px; object-fit:cover; }
-.category p1 { padding:10px; font-family:Georgia; font-size:13px;
+.category p1 { padding:5px; font-family:Georgia; font-size:13px;
  
 }
-.category p { padding:0 10px; flex:1; font-size:9px;text-align:center;line-height:30px;}
+.category p { padding:1px; flex:1; font-size:12px;text-align:center;line-height:30px;}
 .category a{
   width:90%;
   height:40px;
@@ -223,7 +223,9 @@ html { scroll-behavior:smooth; }
   <div class="category">
     <img src="3.jpeg">
     <p1>PERSONAL CARE</p1>
-    <p>Category Number=3
+    <p>
+      <br>
+      Category Number=3
     <br>
     Next Category=10
     
@@ -245,6 +247,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="5.jpeg">
     <p1>HOME & KITCHEN</p1>
+    <br>
     <p>Category Number=5
     <br>
     Next Category=10
@@ -255,8 +258,8 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="6.jpeg">
     <p1>FOOTWEAR</p1>
-    <p>
       <br>
+      <p>
       Category Number=6
     <br>
     Next Category=10
@@ -267,6 +270,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="7.jpeg">
     <p1>TOOLS & HARDWARE</p1>
+    <br>
     <p>Category Number=7
     <br>
     Next Category=10
@@ -277,6 +281,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="8.jpeg">
     <p1>HOME DECOR</p1>
+    <br>
     <p>Category Number=8
     <br>
     Next Category=10
@@ -287,6 +292,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="9.jpeg">
     <p1>PLASTIC ITEMS</p1>
+    <br>
     <p>Category Number=9
     <br>
     Next Category=10
