--- a/index3.html
+++ b/index3.html
@@ -116,10 +116,10 @@ nav a:hover { color:yellow; }
 }
 .category:hover { transform:translateY(-10px); box-shadow:0 0 25px rgba(0,0,0,0.5); }
 .category img { width:100%; height:200px; object-fit:cover; }
-.category p1 { padding:10px; font-family:Georgia; font-size:13px;
+.category p1 { padding:5px; font-family:Georgia; font-size:13px;
  
 }
-.category p { padding:0 10px; flex:1; font-size:12px;text-align:center;line-height:30px;}
+.category p { padding:1px; flex:1; font-size:12px;text-align:center;line-height:30px;}
 .category a{
   width:90%;
   height:40px;
@@ -223,6 +223,7 @@ html { scroll-behavior:smooth; }
   <div class="category">
     <img src="17.jpeg">
     <p1>MIRROR</p1>
+    <br>
     <p>Category Number=3
     <br>
     Next Category=10
@@ -233,9 +234,8 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="18.jpeg">
     <p1>PERFUME</p1>
-    <p>
-      <br>
-      Category Number=4
+    <br>
+    <p>Category Number=4
     <br>
     Next Category=10
     
@@ -245,6 +245,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="">
     <p1>(EMPTY)</p1>
+    <br>
     <p>Category Number=0
     <br>
     Next Category=0
@@ -255,8 +256,8 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="">
     <p1>(EMPTY)</p1>
+    <br>
     <p>
-      <br>
       Category Number=0
     <br>
     Next Category=0
@@ -267,6 +268,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="">
     <p1>(EMPTY)</p1>
+    <br>
     <p>Category Number=0
     <br>
     Next Category=0
@@ -277,6 +279,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="">
     <p1>(EMPTY)</p1>
+    <br>
     <p>Category Number=0
     <br>
     Next Category=0
@@ -287,6 +290,7 @@ html { scroll-behavior:smooth; }
     <div class="category">
     <img src="">
     <p1>(EMPTY)</p1>
+    <br>
     <p>Category Number=0
     <br>
     Next Category=0
