--- a/index4.html
+++ b/index4.html
@@ -101,26 +101,27 @@ nav a:hover { color:yellow; }
 
 /* ===== Categories ===== */
 #categories { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; width:90%; margin:20px auto; }
-.category{
-  position:relative;
-  flex:1 1 152px;
-  width:152px;
-  height:1240px;
+.category {
+  position: relative; /* ensure absolute children are relative to this */
+  width: 152px;
+  max-width:152px;
+  height: 390px;
+  margin: 10px auto;
   background-image:url("25.jpeg");
   background-size:cover;
   background-position:center;
-  background-repeat:no-repeat;
-  display:flex;
-  flex-direction:column;
-  justify-content:flex-end;
-  margin:1px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
+
 .category:hover { transform:translateY(-10px); box-shadow:0 0 25px rgba(0,0,0,0.5); }
 
-.category p1 { padding:10px; font-family:Georgia; font-size:13px;
+.category p1 { padding:5px; font-family:Georgia; font-size:13px;
  
 }
-.category p { padding:0 10px; flex:1; font-size:12px;text-align:center;line-height:30px;}
+.category p { padding:1px; flex:1; font-size:12px;text-align:center;line-height:30px;}
 .category a{
   width:90%;
   height:40px;
@@ -165,20 +166,7 @@ html { scroll-behavior:smooth; }
   padding-right:110px;
   
 }
-.category {
-  position: relative; /* ensure absolute children are relative to this */
-  width: 152px;
-  max-width:152px;
-  height: 390px;
-  margin: 10px auto;
-  background-image:url("25.jpeg");
-  background-size:cover;
-  background-position:center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
+
 
 /* First image full width */
 
